--- a/WebApiRestBase/ServiceLayer/Project.SL.csproj
+++ b/WebApiRestBase/ServiceLayer/Project.SL.csproj
@@ -60,7 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form\Login.cs" />
+    <Compile Include="Form\Response\LoginRes.cs" />
     <Compile Include="Form\SignUp.cs" />
+    <Compile Include="Form\UserDetailsClaim.cs" />
+    <Compile Include="Mapper\AuthMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\User\IUserService.cs" />
     <Compile Include="Service\User\UserService.cs" />
