--- a/WebApiRestBase/WebApiRestBase/packages.config
+++ b/WebApiRestBase/WebApiRestBase/packages.config
@@ -13,9 +13,18 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.7.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.7.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.7.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Jwt" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
@@ -24,6 +33,8 @@
   <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net472" />
   <package id="Ninject.Web.WebApi" version="3.3.1" targetFramework="net472" />
   <package id="Ninject.Web.WebApi.WebHost" version="3.3.1" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.7.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
